--- a/src/Styles/text_over_img_styles.scss
+++ b/src/Styles/text_over_img_styles.scss
@@ -21,6 +21,7 @@
     width: 90%;
     max-width: 1200px;
     z-index: 2;
+    padding-top: 3rem;
     
     h1 {
       font-size: 4rem;
